--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>Gilberto Sabina</h1>
-						<p>Based in Miami, FL.</p>
+						<h1>Welcome</h1>
+						<p>Gilberto Sabina <br>Based in Miami, FL.</p>
 					</header>
 					
 					<a href="mailto:gilbertosabina@outlook.com?Subject=Lets%20collaborate!" target="_top" class="button big scrolly">Get a Quote.</a>
