--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="inner">
 					<header>
 						<h1>Welcome</h1>
-						<p>Gilberto Sabina, <br>Based in Miami, FL.</p>
+						<p>Gilberto Sabina <br>Based in Miami, FL.</p>
 					</header>
 					
 					<a href="mailto:gilbertosabina@outlook.com?Subject=Lets%20collaborate!" target="_top" class="button big scrolly">Get a Quote.</a>
