--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>Welcome</h1>
+						<h1>Welcome.</h1>
 						<p>Gilberto Sabina <br>Based in Miami, FL.</p>
 					</header>
 					
